--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,5 @@
 language: python
 python:
-  - "3.5"
-install: "pip install -r requirements.txt"
+  - "3.5.2"
+install: "pip3 install -r requirements.txt"
 script: ./run_tests.bash
